; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-metadata.c_dm_cache_set_discard.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-metadata.c_dm_cache_set_discard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_cache_metadata = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dm_cache_set_discard(%struct.dm_cache_metadata* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.dm_cache_metadata*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.dm_cache_metadata* %0, %struct.dm_cache_metadata** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %4, align 8
  %9 = call i32 @WRITE_LOCK(%struct.dm_cache_metadata* %8)
  %10 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @__discard(%struct.dm_cache_metadata* %10, i32 %11, i32 %12)
  store i32 %13, i32* %7, align 4
  %14 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %4, align 8
  %15 = call i32 @WRITE_UNLOCK(%struct.dm_cache_metadata* %14)
  %16 = load i32, i32* %7, align 4
  ret i32 %16
}

declare dso_local i32 @WRITE_LOCK(%struct.dm_cache_metadata*) #1

declare dso_local i32 @__discard(%struct.dm_cache_metadata*, i32, i32) #1

declare dso_local i32 @WRITE_UNLOCK(%struct.dm_cache_metadata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
